[package]
name = "junkanoo"
version = "1.0.0"
authors = ["chad.nehemiah94@gmail.com"]
edition = "2021"
license = "MIT"
readme = "README.md"


[profile.release]
lto = true


[dependencies]
ratatui = "0.29.0"
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.95"
async-std = "1.13.0"
better-panic = "0.3"
chrono = "0.4.39"
crossbeam-channel = "0.5.15"
clap = { version = "4.5.23", features = ["cargo"] }
crossterm = "0.29.0"
dirs-next = "2.0.0"
futures = "0.3.31"
itertools = "0.14.0"
once_cell = "1.21.3"
lazy_static = "1.5.0"
libp2p = { version = "0.54.1", features = [
	"rsa",
	"tokio",
	"cbor",
	"dns",
	"kad",
	"macros",
	"request-response",
	"quic",
	"tcp",
	"noise",
	"yamux",
] }
parking_lot = "0.12.3"
rclite = "0.2.4"
serde = { version = "1.0.217", features = ["derive"] }
structopt = "0.3.26"
fake = "3.1.0"
rand = "0.8.5"
bs58 = "0.5.1"
sha2 = "0.10.8"
bip39 = "2.1.0"
mime_guess = "2.0.5"
async-stream = "0.3.6"
async-walkdir = "2.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.0"
libp2p-stream = "0.2.0-alpha"
arboard = "3.4.1"
walkdir = "2.5.0"
