[package]
authors      = ["chad.nehemiah94@gmail.com"]
description  = "A Rust library for distributed systems and networking with libp2p integration"
edition      = "2021"
license      = "MIT"
name         = "junkanoo"
readme       = "README.md"
repository   = "https://github.com/maschad/junkanoo"
rust-version = "1.87.0"
version      = "1.2.3"


[profile.release]
lto = true


[dependencies]
anyhow = "1.0.101"
arboard = "3.6.1"
async-std = "1.13.2"
async-stream = "0.3.6"
async-walkdir = "2.1.0"
bip39 = "2.2.2"
bs58 = "0.5.1"
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["cargo"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
dirs-next = "2.0.0"
fake = "4.4.0"
futures = "0.3.32"
human-panic = { version = "2.0.6", features = ["color"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
libp2p = { version = "0.56.0", features = [
    "rsa",
    "tokio",
    "cbor",
    "dns",
    "kad",
    "macros",
    "request-response",
    "quic",
    "tcp",
    "noise",
    "yamux",
] }
libp2p-stream = "0.4.0-alpha"
mime_guess = "2.0.5"
once_cell = "1.21.3"
parking_lot = "0.12.5"
rand = "0.10.0"
ratatui = "0.30.0"
rclite = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
structopt = "0.3.26"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.25.0"
